# data-application-cidades

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  local.env  pyproject.toml  requirements.txt
data-science/dados-historicos-tratamento-new/: AGENTS.md  README.md  _dedup_map_202606261440_perfil_cidades_dados_historicos.csv  _qualidade_202606261440_perfil_cidades_dados_historicos.csv  classificacao_formacao_revisado_autoritativo.md  main.py  pyproject.toml
data-science/dados-historicos-tratamento-new/data/: _dedup_map_202606281215_perfil_cidades_dados_historicos.csv  inventario_tabelas.csv  relatorio_divergencias_db.md
data-science/dados-historicos-tratamento-new/docs/: apresentacao_contexto_script.md  guia-revisao-classificacao.md  guia-revisao-tratamento.md  relatorio-tratamento-v1.md  relatorio_classificacao.md  revisao-classificacao-issue-96.html
data-science/dados-historicos-tratamento-new/scripts/: gerar_linha_do_tempo.py  render_issue96_profissional.py  revisao_classificacao_db_evidencias.py  revisao_issue96_evidencias.py  revisao_tratamento_db_evidencias.py
data-science/dados-historicos-tratamento-new/scripts/sftp/: batimento_estrutura.py  (+2 more)
data-science/dados-historicos-tratamento-new/tests/: test_classificador.py  test_cli.py  test_db_connection.py  test_db_writer.py  test_deduplicacao.py  test_inferencia_colunas.py  test_main_helpers.py  test_preservacao_data_movimento.py  test_regras.py  test_tratamento.py  test_tratamento_cabecalho.py  test_tratamento_pipe_single_col.py  test_tratamento_sftp.py  test_tratamento_subtabelas.py
(+454 files in other folders)
